<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="#D3D3D3"
    android:layout_height="fill_parent" >
    <Button
        android:id="@+id/autoTurnButton"
        android:layout_width="wrap_content"
        android:minWidth="228dip"
        android:layout_height="wrap_content"
        android:minHeight="36dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="40dp"
        android:textSize="21dp"
        android:text="@string/auto_turn_text" />

    <TextView
        android:id="@+id/currentAPView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/autoTurnButton"
        android:layout_below="@+id/autoTurnButton"
        android:layout_marginTop="59dp"
        android:textSize="18dp"
        android:text="@string/currentAP"/>

    <TextView
        android:id="@+id/currentIPV4View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentAPView"
        android:layout_below="@+id/currentAPView"
        android:layout_marginTop="32dp"
        android:textSize="18dp"
        android:text="@string/currentIPV4" />
    <TextView
        android:id="@+id/currentIPV6View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currentIPV4View"
        android:layout_below="@+id/currentIPV4View"
        android:layout_marginTop="32dp"
        android:textSize="18dp"
        android:text="@string/currentIPV6" />

</RelativeLayout>
